packages/sycamore-macro/tests/template/component-fail.stderr
error: unexpected end of input, expected parentheses
  --> $DIR/component-fail.rs:13:26
   |
13 |     let _: Template<G> = template! { C };
   |                          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `UnknownComponent`
  --> $DIR/component-fail.rs:11:38
   |
11 |     let _: Template<G> = template! { UnknownComponent() };
   |                                      ^^^^^^^^^^^^^^^^ use of undeclared type `UnknownComponent`

error[E0308]: mismatched types
  --> $DIR/component-fail.rs:14:40
   |
14 |     let _: Template<G> = template! { C(1) };
   |                                        ^ expected `()`, found integer
